overflow fix for logo buttons

--- a/css/main.css
+++ b/css/main.css
@@ -434,7 +434,6 @@ header{
 
     .logo-link{
         border-color: #BFBFBF;
-        overflow: hidden;
         transition: 0.3s;
     }
 
